test_suite/tests/ui/fail/invalid_attr_value_for_arg/invalid_arg_min.stderr
error: custom attribute panicked
 --> $DIR/invalid_arg_min.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: arg `min` must be an integer literal
